# interview_coach

./: README.md  main.py  pyproject.toml  requirements.txt  setup.sh  test_interview_coach.py
src/interview_coach/: __init__.py  api_interface.py  system.py  utils.py
src/interview_coach/agents/: __init__.py  feedback_coach.py  interviewer.py  job_strategist.py
